Fix issue with content overflowing past screen

--- a/src/index.css
+++ b/src/index.css
@@ -23,7 +23,7 @@ body {
   max-width: 100vw;
   width: 100vw;
   width: 100dvw;
-  overflow-x: hidden;
+  overflow: hidden;
 }
 
 p {
